change to use bitnami image instead of official

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,30 +2,23 @@ version: '3.8'
 
 services:
   mariadb:
-    container_name: dev_mariadb
-    image: mariadb:latest
+    container_name: aio_mariadb
+    image: bitnami/mariadb:latest
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: exampledb
+      - ALLOW_EMPTY_PASSWORD=yes
     ports:
-      - "3306:3306"
+      - "13306:3306"
     volumes:
-      - mariadb_data:/var/lib/mysql
-      - ./my.cnf:/etc/mysql/conf.d/my.cnf
+      - mariadb_data:/bitnami/maria
     restart: always
     networks:
       - mariadb_network
 
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin:latest
-    container_name: dev_pma
-    environment:
-      PMA_HOST: mariadb
-      PMA_PORT: 3306
-      PMA_USER: root
-      PMA_PASSWORD: rootpassword
+    image: bitnami/phpmyadmin:latest
+    container_name: aio_pma
     ports:
-      - "8081:80"
+      - "8081:8080"
     depends_on:
       - mariadb
     restart: always
@@ -33,7 +26,7 @@ services:
       - mariadb_network
 
   tomcat:
-    container_name: dev_tomcat
+    container_name: aio_tomcat
     image: tomcat:latest
     ports:
       - "8080:8080"
@@ -45,6 +38,7 @@ services:
 
 volumes:
   mariadb_data:
+    driver: local
 
 networks:
   mariadb_network:
